Change message for registration

--- a/geoavalanche/templates/site_index.html
+++ b/geoavalanche/templates/site_index.html
@@ -12,8 +12,8 @@ This is where you can override the hero area block. You can simply modify the co
     <div class="container">
       <h1>{% trans "Every avalanche has a place" %}</h1>
       <p><h3>{% blocktrans %}GeoAvalanche is a snow avalanche information system for sharing avalanche data and maps about the risk in the mountains you are going to visit.{% endblocktrans %}</h3></p>
-      <p>{% blocktrans %}We are currently in the early beta preview. Registration will come later on!{% endblocktrans %}</p>
-      <p>{% blocktrans %}If you would like to join our community and create your own maps then don't miss to <a href="#contact">Contact Us</a>.{% endblocktrans %}</p>
+      <p>{% blocktrans %}Registration is now open for everybody! You can <a href="/account/signup/">sign up</a>. An email will be delivered soon to your account for confirmation.{% endblocktrans %}</p>
+      <p>{% blocktrans %}Join our community, create and share immediately your own maps about snow avalanche. If you have any problem please don't miss to <a href="#contact">Contact Us</a>. We will be happy to help.{% endblocktrans %}</p>
       <span>{% trans 'Need help?' %} <a href="#">{% trans 'Getting Started' %}</a></span>
     </div>
   </div>
